fixed text overflow in style.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,3 +30,22 @@ img {
     -o-transition: background 300ms ease-in-out 400ms;
     transition: background 300ms ease-in-out 400ms;
 }
+
+.note{
+    height: 400px;
+}
+
+#note-content{
+    padding: 10px;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;
+    height: 230px;
+}
+
+#note-title{
+    overflow:hidden;
+    text-overflow:ellipsis;
+    height: 20px;
+    white-space: nowrap;
+}
